--- a/index.html
+++ b/index.html
@@ -17,16 +17,8 @@
             color: #0d6efd;
             letter-spacing: 0.01em;
         }
-        .disclaimer-section {
-            background: #fff3cd;
-            border: 1px solid #ffeeba;
-            border-radius: 0.5rem;
-            padding: 1.5rem;
-            margin-top: 2.5rem;
-            margin-bottom: 2.5rem;
-        }
         .card.h-100 {
-            min-height: 275px;
+            min-height: 210px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -43,177 +35,81 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
-      <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="index.html">Home</a>
-        <div class="d-flex flex-wrap ms-auto">
-          <a href="frequently-used.html" class="btn btn-light mx-1 my-1 fw-semibold">Frequently Used</a>
-          <a href="risk-assessment.html" class="btn btn-light mx-1 my-1 fw-semibold">Risk Assessment</a>
-          <a href="recurrence-treatment.html" class="btn btn-light mx-1 my-1 fw-semibold">Recurrence/Treatment</a>
-          <a href="other-calculators.html" class="btn btn-light mx-1 my-1 fw-semibold">Other Calculators</a>
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Home</a>
+            <div class="d-flex flex-wrap ms-auto">
+                <a href="frequently-used.html" class="btn btn-light mx-1 my-1 fw-semibold">Frequently Used</a>
+                <a href="risk-assessment.html" class="btn btn-light mx-1 my-1 fw-semibold">Risk Assessment</a>
+                <a href="recurrence-treatment.html" class="btn btn-light mx-1 my-1 fw-semibold">Recurrence/Treatment</a>
+                <a href="other-calculators.html" class="btn btn-light mx-1 my-1 fw-semibold">Other Calculators</a>
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="container my-4">
         <h1 class="mb-3">Breast Pathology Calculators</h1>
         <p class="lead">
-            This website provides a suite of breast cancer risk and pathology calculators intended for use by healthcare professionals.
+            This website provides a comprehensive suite of breast cancer calculators and risk assessment tools for healthcare professionals. The calculators are designed to assist with breast cancer prognostication, risk stratification, and treatment planning using validated models and up-to-date clinical evidence. Each tool is presented with transparent methodology and reference information, supporting informed clinical decision-making in both pathology and multidisciplinary settings[#1].
+        </p>
+        <p>
+            The calculators are grouped for ease of navigation:
+        </p>
+        <ul>
+            <li><strong>Frequently Used Calculators:</strong> Core tools for pathologists, including Magee Equations, H-score, NPI, PEPI, and Residual Cancer Burden.</li>
+            <li><strong>Risk Assessment Models:</strong> Tools for estimating the risk of developing breast cancer, including the Gail Model, Tyrer-Cuzick, and BCSC calculators.</li>
+            <li><strong>Recurrence/Treatment Models:</strong> Models for assessing recurrence risk after invasive breast cancer diagnosis and for guiding therapy, such as Predict and CTS5.</li>
+            <li><strong>Other Calculators:</strong> Additional resources for specialized scenarios, including MD Anderson and Mayo Clinic tools.</li>
+        </ul>
+
+        <div class="row g-4 mb-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Frequently Used Calculators</h5>
+                        <p class="card-text flex-grow-1">Magee, H-score, NPI, PEPI, Residual Cancer Burden</p>
+                        <a href="frequently-used.html" class="btn btn-primary mt-auto">View Group</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Risk Assessment Calculators</h5>
+                        <p class="card-text flex-grow-1">Gail Model, Tyrer-Cuzick, BCSC</p>
+                        <a href="risk-assessment.html" class="btn btn-primary mt-auto">View Group</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Recurrence/Treatment Calculators</h5>
+                        <p class="card-text flex-grow-1">Predict Tool, CTS5</p>
+                        <a href="recurrence-treatment.html" class="btn btn-primary mt-auto">View Group</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Other Calculators</h5>
+                        <p class="card-text flex-grow-1">MD Anderson, Mayo Clinic, and more</p>
+                        <a href="other-calculators.html" class="btn btn-primary mt-auto">View Group</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr class="my-4">
+
+        <div class="section-title">Acknowledgements</div>
+        <p>
+            [enter here]
         </p>
 
-        <!-- CALCULATORS FREQUENTLY USED BY PATHOLOGISTS -->
-        <div class="section-title">Calculators Frequently Used by Pathologists</div>
-        <div class="row g-4">
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Magee Equations Calculator</h5>
-                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data.</p>
-                        <a href="magee.html" class="btn btn-primary mt-auto">Open Calculator</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">H-score Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            Calculates the semi-quantitative immunohistochemical H-score for ER, PR, or other stains. The H-score is the sum of the percent staining multiplied by intensity.
-                        </p>
-                        <a href="hscore.html" class="btn btn-primary mt-auto">Open Calculator</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Nottingham Prognostic Index Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            Calculates the Nottingham Prognostic Index (NPI) for breast cancer using tumor size, lymph node status, and grade.
-                        </p>
-                        <a href="npi.html" class="btn btn-primary mt-auto">Open Calculator</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Pre-operative Endocrine Prognostic Index (PEPI score) Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            Calculates PEPI score for those who received neoadjuvant endocrine therapy alone, based on pT stage, pN stage, Ki67 level, and ER status.
-                        </p>
-                        <a href="pepi.html" class="btn btn-primary mt-auto">Open Calculator</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Residual Cancer Burden Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            Tool for residual cancer burden assessment after neoadjuvant therapy.
-                        </p>
-                        <a href="https://www.mdanderson.org/breastcancer_RCB" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- MODELS FOR ASSESSING THE RISK OF DEVELOPING BREAST CANCER -->
-        <div class="section-title">Models for Assessing the Risk of Developing Breast Cancer</div>
-        <div class="row g-4">
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Breast Cancer Risk Assessment Tool (Gail Model)</h5>
-                        <p class="card-text flex-grow-1">
-                            NCI calculator for estimating absolute risk of developing breast cancer over 5 years and lifetime.
-                        </p>
-                        <a href="https://bcrisktool.cancer.gov/calculator.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Tyrer-Cuzick Risk Assessment Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            Tyrer-Cuzick (IBIS) risk calculator for lifetime breast cancer risk assessment.
-                        </p>
-                        <a href="https://magview.com/ibis-risk-calculator/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Breast Cancer Surveillance Consortium (BCSC) Invasive Breast Cancer Risk Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            BCSC calculator for estimating 6-year cumulative risk of developing advanced breast cancer.
-                        </p>
-                        <a href="https://tools.bcsc-scc.ucdavis.edu/BC5yearRisk/#/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- MODELS FOR ASSESSING THE RISK OF RECURRENCE... -->
-        <div class="section-title">Models for Assessing the Risk of Recurrence from Previously Diagnosed Invasive Breast Cancer and Possibly Guide Treatment</div>
-        <div class="row g-4">
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Predict Tool</h5>
-                        <p class="card-text flex-grow-1">
-                            Online tool to estimate how different treatments for early invasive breast cancer might improve survival rates after surgery.
-                        </p>
-                        <a href="https://breast.predict.nhs.uk/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">CTS5 Calculator</h5>
-                        <p class="card-text flex-grow-1">
-                            CTS5 model for predicting late distant metastasis for ER-positive breast cancer after endocrine therapy.
-                        </p>
-                        <a href="https://www.cts5-calculator.com/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- OTHER CALCULATORS -->
-        <div class="section-title">Other Calculators</div>
-        <div class="row g-4">
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Breast Cancer Calculators from MD Anderson Cancer Center</h5>
-                        <p class="card-text flex-grow-1">
-                            Suite of breast cancer calculators from MD Anderson Cancer Center.
-                        </p>
-                        <a href="https://www.mdanderson.org/for-physicians/clinical-tools-resources/clinical-calculators.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Breast Cancer Risk Assessment Tool for Women with Benign Breast Disease</h5>
-                        <p class="card-text flex-grow-1">
-                            Mayo Clinic tool for risk assessment in women with benign breast disease.
-                        </p>
-                        <a href="https://www.mayoclinic.org/breast-cancer-risk-prediction/itt-20150095#:~:text=to%20Mayo%20Clinic-,Breast%20Cancer%20Risk%20Assessment%20Tool%20for%20Women%20With%20Benign%20Breast,and%20prevention%20of%20breast%20cancer." class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- DISCLAIMER -->
-        <div class="disclaimer-section">
-            <strong>Disclaimer:</strong><br>
-            These calculators should only be used by medical professionals who understand its usefulness and limitations. Medical professionals should use these calculators at their own discretion and this information should not be used for the diagnosis or treatment of any health problem or disease. The information is not intended to replace clinical judgment or guide individual patient care in any manner and is not provided in the course of a professional relationship between a health care provider and a patient. The website creators are not liable for any direct, indirect, incidental, special, consequential or punitive damages arising in any way from the actions taken by medical professionals based on the information provided by the calculators or any other information set forth herein. The creators of this website hereby disclaim any warranty of any kind, express or implied, including but not limited to the implied warranties of title, noninfringement, merchantability and fitness for a particular use or purpose.
+        <div class="section-title">Disclaimer</div>
+        <div class="alert alert-warning" role="alert">
+            These calculators should only be used by medical professionals who understand their usefulness and limitations. Medical professionals should use these calculators at their own discretion and this information should not be used for the diagnosis or treatment of any health problem or disease. The information is not intended to replace clinical judgment or guide individual patient care in any manner and is not provided in the course of a professional relationship between a health care provider and a patient. The website creators are not liable for any direct, indirect, incidental, special, consequential or punitive damages arising in any way from the actions taken by medical professionals based on the information provided by the calculators or any other information set forth herein. The creators of this website hereby disclaim any warranty of any kind, express or implied, including but not limited to the implied warranties of title, noninfringement, merchantability and fitness for a particular use or purpose[#1].
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
