--- a/npi.html
+++ b/npi.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale极1.0">
     <title>Nottingham Prognostic Index (NPI) Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        html, body {
+            min-height: 100%;
+            height: auto;
+        }
+        html {
+            background: linear-gradient(to bottom, pink 0%, white 100%);
+        }
         body {
-            background: #f6f8fa;
+            margin: 0;
+            background: transparent;
+            min-height: 100vh;
+            overflow-y: auto !important;
         }
         .calculator-container { 
             max-width: 800px; 
@@ -24,9 +34,17 @@
         input[type="number"], select { 
             max-width: 200px; 
         }
-        .accordion-button:not(.collapsed) { 
-            color: #0d6efd; 
-            background-color: #e7f1ff; 
+        .accordion-button,
+        .accordion-button:not(.collapsed) {
+            color: #fff !important;
+            background-color: #e83e8c !important;
+        }
+        .accordion-button:focus {
+            box-shadow: 0 0 0 0.25rem rgba(232, 62, 140, 0.25);
+        }
+        .accordion-collapse {
+            overflow: visible !important;
+            max-height: none !important;
         }
         .table th, .table td {
             vertical-align: middle;
@@ -35,11 +53,26 @@
         pre.bg-light { 
             white-space: pre-wrap; 
         }
+        .btn-primary,
+        .btn-primary:active,
+        .btn-primary:focus,
+        .btn-primary:hover {
+            background-color: #e83e8c !important;
+            border-color: #e83e8c !important;
+        }
+        .btn-outline-secondary {
+            border-color: #e83e8c;
+            color: #e83e8c;
+        }
+        .btn-outline-secondary:hover {
+            background-color: #e83e8c;
+            color: white;
+        }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
-        <div class="container-fluid justify-content-center">
+    <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #e83e8c;">
+        <极div class="container-fluid justify-content-center">
             <a class="navbar-brand fw-bold mx-4" href="index.html">Home</a>
             <a class="navbar-brand fw-bold mx-4" href="frequently-used.html">Frequently Used</a>
             <a class="navbar-brand fw-bold mx-4" href="risk-assessment.html">Risk Assessment</a>
@@ -47,7 +80,6 @@
             <a class="navbar-brand fw-bold mx-4" href="other-calculators.html">Other Calculators</a>
         </div>
     </nav>
-
 
     <div class="calculator-container">
         <h2>Nottingham Prognostic Index (NPI) Calculator</h2>
@@ -110,7 +142,7 @@
                                         <th></th>
                                         <th></th>
                                         <th>Proportion (%)</th>
-                                        <th>10-year survival (%)</th>
+                                        <th>10-year survival (%)</极th>
                                         <th>Proportion (%)</th>
                                         <th>10-year survival (%)</th>
                                     </tr>
@@ -183,22 +215,38 @@
 
     <script>
         function calculateNPI() {
-            const tumorSize = Math.min(20, Math.max(0.1, parseFloat(document.getElementById('tumorSize').value) || 0));
-            const nodeStatus = parseInt(document.getElementById('nodeStatus').value);
-            const grade = Math.min(3, Math.max(1, parseInt(document.getElementById('grade').value) || 1));
-
+            // Get values from form
+            const tumorSize = parseFloat(document.getElementById('tumorSize').value) || 0;
+            const nodeStatus = parseInt(document.getElementById('nodeStatus').value) || 0;
+            const grade = parseInt(document.getElementById('grade').value) || 1;
+            
+            // Validate inputs
+            if (tumorSize < 0.1 || tumorSize > 20) {
+                alert("Tumor size must be between 0.1 and 20 cm");
+                return;
+            }
+            if (grade < 1 || grade > 3) {
+                alert("Grade must be between 1 and 3");
+                return;
+            }
+            if (nodeStatus === 0) {
+                alert("Please select lymph node status");
+                return;
+            }
+            
+            // Calculate NPI
             const npi = (0.2 * tumorSize) + nodeStatus + grade;
             document.getElementById('npiResult').textContent = npi.toFixed(2);
 
             // Determine prognostic group
-            // let group = '';
-            // if (npi >= 2.02 && npi <= 2.4) group = "Excellent prognosis";
-            // else if (npi > 2.4 && npi <= 3.4) group = "Good prognosis";
-            // else if (npi > 3.4 && npi <= 4.4) group = "Moderate 1 prognosis";
-            // else if (npi > 4.4 && npi <= 5.4) group = "Moderate 2 prognosis";
-            // else if (npi > 5.4 && npi <= 6.4) group = "Poor prognosis";
-            // else if (npi > 6.4 && npi <= 6.8) group = "Very poor prognosis";
-            // else group = "Outside validated range";
+            let group = '';
+            if (npi >= 2.02 && npi <= 2.4) group = "Excellent prognosis";
+            else if (npi > 2.4 && npi <= 3.4) group = "Good prognosis";
+            else if (npi > 3.4 && npi <= 4.4) group = "Moderate 1 prognosis";
+            else if (npi > 4.4 && npi <= 5.4) group = "Moderate 2 prognosis";
+            else if (npi > 5.4 && npi <= 6.4) group = "Poor prognosis";
+            else if (npi > 6.4 && npi <= 6.8) group = "Very poor prognosis";
+            else group = "Outside validated range";
 
             document.getElementById('npiGroup').textContent = group;
             document.querySelector('.result-alert').style.display = 'block';
