--- a/pepi.html
+++ b/pepi.html
@@ -6,8 +6,18 @@
     <title>PEPI Score Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        html, body {
+            min-height: 100%;
+            height: auto;
+        }
+        html {
+            background: linear-gradient(to bottom, pink 0%, white 100%);
+        }
         body {
-            background: #f6f8fa;
+            margin: 0;
+            background: transparent;
+            min-height: 100vh;
+            overflow-y: auto !important;
         }
         .calculator-container { 
             max-width: 800px; 
@@ -24,17 +34,40 @@
         input[type="number"], select { 
             max-width: 200px; 
         }
-        .accordion-button:not(.collapsed) { 
-            color: #0d6efd; 
-            background-color: #e7f1ff; 
+        .accordion-button,
+        .accordion-button:not(.collapsed) {
+            color: #fff !important;
+            background-color: #e83e8c !important;
+        }
+        .accordion-button:focus {
+            box-shadow: 0 0 0 0.25rem rgba(232, 62, 140, 0.25);
+        }
+        .accordion-collapse {
+            overflow: visible !important;
+            max-height: none !important;
         }
         pre.bg-light { 
             white-space: pre-wrap; 
         }
+        .btn-primary,
+        .btn-primary:active,
+        .btn-primary:focus,
+        .btn-primary:hover {
+            background-color: #e83e8c !important;
+            border-color: #e83e8c !important;
+        }
+        .btn-outline-secondary {
+            border-color: #e83e8c;
+            color: #e83e8c;
+        }
+        .btn-outline-secondary:hover {
+            background-color: #e83e8c;
+            color: white;
+        }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #e83e8c;">
         <div class="container-fluid justify-content-center">
             <a class="navbar-brand fw-bold mx-4" href="index.html">Home</a>
             <a class="navbar-brand fw-bold mx-4" href="frequently-used.html">Frequently Used</a>
@@ -82,7 +115,6 @@
 
         <div class="result-alert alert alert-primary" role="alert">
             <h4>PEPI Score: <span id="pepiResult">-</span></h4>
-            <p class="mb-0" id="riskGroup"></p>
         </div>
 
         <div class="accordion mt-4" id="infoAccordion">
@@ -184,13 +216,6 @@
 
             document.getElementById('pepiResult').textContent = pepi;
             document.querySelector('.result-alert').style.display = 'block';
-
-            // Risk group
-            // let risk = '';
-            // if (pepi === 0) risk = "Best prognosis (PEPI score 0)";
-            // else if (pepi >= 1 && pepi <= 3) risk = "Intermediate prognosis (PEPI score 1–3)";
-            // else risk = "Worse prognosis (PEPI score ≥4)";
-            // document.getElementById('riskGroup').textContent = risk;
         }
 
         // Input validation (real-time clamping)
