--- a/magee.html
+++ b/magee.html
@@ -179,8 +179,9 @@ Total H-Score = 0 + 30 + 80 + 60 = 170
 
                             <h5>Webinar on the Magee Equations</h5>
                             <p>February 20, 2025: Magee Equations Safe, Effective, and Underutilized
-                                <li><a href="https://www.youtube.com/watch?v=C8Pbo3O2SpI</a></li>
-                                        </p>
+                                  <li><a href="https://www.youtube.com/watch?v=C8Pbo3O2SpI"</a></li>
+                             </p>
+                            <ul>
                             <h5>References - Internal Publications</h5>
                             <ul>
                                 <li><a href="https://www.ncbi.nlm.nih.gov/pubmed/40357830" target="_blank">Bedell M et al (2025)</a></li>
