--- a/other-calculators.html
+++ b/other-calculators.html
@@ -89,6 +89,18 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Breast Cancer Calculators from Memorial Sloan Kettering Cancer Center</h5>
+                        <p class="card-text flex-grow-1">
+                            Nomogram tool for individualized breast cancer outcome prediction from MSKCC.
+                        </p>
+                        <a href="https://nomograms.mskcc.org/breast/?ts=1751920125906&source_id=4046361569807148&utm_source=null&utm_medium=null&utm_campaign=null&utm_term=null&utm_content=null"
+                           class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
