--- a/frequently-used.html
+++ b/frequently-used.html
@@ -103,6 +103,17 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Tumor Volume Reduction Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            Tool for estimating tumor size/volume reduction in the breast after neoadjuvant therapy-Magee method.
+                        </p>
+                        <a href="tvr.html" class="btn btn-primary mt-auto">Open Calculator</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Residual Cancer Burden Calculator</h5>
                         <p class="card-text flex-grow-1">
                             Tool for residual cancer burden assessment after neoadjuvant therapy.
